--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,19 +29,18 @@ header h1 {
   color: #d9dcd6;
 }
 
-header div {
+nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
-}
-
-header div ul {
   list-style-type: none;
 }
 
-header div ul li {
+/* added nav li declaration to reduce redundant declarations */
+
+nav li {
   display: inline-block;
   margin-left: 25px;
 }
@@ -78,7 +77,6 @@ p {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
-  
 }
 
 .benefits {
@@ -94,23 +92,23 @@ p {
 
 /* added .benefit class to reduce redundant declarations */
 
-.benefit {
+article {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit h3 {
+.benefits h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit img {
+.benefits img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.content div {
+.content article {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -127,7 +125,7 @@ img {
   max-height: 200px;
 }
 
-.footer {
+footer {
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -135,6 +133,6 @@ img {
   text-align: center;
 }
 
-.footer h2 {
+footer h2 {
   font-size: 20px;
 }
