--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ nav {
 
 /* added nav li declaration to reduce redundant declarations */
 
-nav li {
+header nav li {
   display: inline-block;
   margin-left: 25px;
 }
@@ -66,11 +66,13 @@ p {
 .float-left {
   float: left;
   margin-right: 25px;
+  max-height: 200px
 }
 
 .float-right {
   float: right;
   margin-left: 25px;
+  max-height: 200px
 }
 
 .content {
@@ -88,6 +90,8 @@ p {
   height: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
+  margin-bottom: 32px;
+  color: #ffffff;
 }
 
 /* added .benefit class to reduce redundant declarations */
@@ -97,9 +101,18 @@ article {
   color: #ffffff;
 }
 
-.benefits h3 {
+article h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.benefit h3 {
   margin-bottom: 10px;
   text-align: center;
+}
+
+.benefit p {
+  margin-bottom: 2rem;
 }
 
 .benefits img {
@@ -119,11 +132,7 @@ article {
   font-size: 36px;
 }
 
-/* reduced redundant img declarations */
-
-img {
-  max-height: 200px;
-}
+/* removed redundant img declarations */
 
 footer {
   padding: 30px;
@@ -133,6 +142,6 @@ footer {
   text-align: center;
 }
 
-footer h2 {
+footer h3 {
   font-size: 20px;
 }
