--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,148 +1,146 @@
+/* Global Styles */
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  background-color: #d9dcd6;
-}
-
-/* changed header from class declaration to element declaration */
-
-header {
-  padding: 20px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  background-color: #2a607c;
-  color: #ffffff;
-}
-
-header h1 {
-  display: inline-block;
-  font-size: 48px;
-}
-
-/* removed unnecessary header h1 span declaration */
-
-.seo {
-  color: #d9dcd6;
-}
-
-nav {
-  padding-top: 15px;
-  margin-right: 20px;
-  float: right;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 20px;
-  list-style-type: none;
-}
-
-/* added nav li declaration to reduce redundant declarations */
-
-header nav li {
-  display: inline-block;
-  margin-left: 25px;
-}
-
-a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-p {
-  font-size: 16px;
-}
-
-.hero {
-  height: 800px;
-  width: 100%;
-  margin-bottom: 25px;
-  background-image: url("../images/digital-marketing-meeting.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.float-left {
-  float: left;
-  margin-right: 25px;
-  max-height: 200px;
-}
-
-.float-right {
-  float: right;
-  margin-left: 25px;
-  max-height: 200px;
-}
-
-.content {
-  width: 75%;
-  display: inline-block;
-  margin-left: 20px;
-}
-
-.benefits {
-  margin-right: 20px;
-  padding: 20px;
-  clear: both;
-  float: right;
-  width: 20%;
-  height: 100%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #2589bd;
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-/* added .benefit class to reduce redundant declarations */
-
-article {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-article h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.benefit h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit p {
-  margin-bottom: 2rem;
-}
-
-.benefits img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.content article {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-/* removed redundant img declarations */
-
-footer {
-  padding: 30px;
-  clear: both;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  text-align: center;
-  background-color: #d9dcd6;
-}
-
-footer h3 {
-  font-size: 20px;
-}
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
+    background-color: #d9dcd6;
+  }
+  
+  /* Header Styles */
+  header {
+    padding: 20px;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+  }
+  
+  header h1 {
+    display: inline-block;
+    font-size: 48px;
+  }
+  
+  .seo {
+    color: #d9dcd6;
+  }
+  
+  nav {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-size: 20px;
+    list-style-type: none;
+  }
+  
+  header nav li {
+    display: inline-block;
+    margin-left: 25px;
+  }
+  
+  /* Link Styles */
+  a {
+    color: #ffffff;
+    text-decoration: none;
+  }
+  
+  /* Paragraph Styles */
+  p {
+    font-size: 16px;
+  }
+  
+  /* Hero Section Styles */
+  .hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  
+  /* Float Styles */
+  .float-left {
+    float: left;
+    margin-right: 25px;
+    max-height: 200px;
+  }
+  
+  .float-right {
+    float: right;
+    margin-left: 25px;
+    max-height: 200px;
+  }
+  
+  /* Content Section Styles */
+  .content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+  }
+  
+  /* Benefits Section Styles */
+  .benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    background-color: #2589bd;
+    margin-bottom: 32px;
+    color: #ffffff;
+  }
+  
+  .benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  
+  .benefit p {
+    margin-bottom: 2rem;
+  }
+  
+  .benefits img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+  }
+  
+  /* Article Styles */
+  article {
+    margin-bottom: 32px;
+    color: #ffffff;
+  }
+  
+  article h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+  
+  .content article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+    margin-bottom: 20px;
+    font-size: 36px;
+  }
+  
+  /* Footer Styles */
+  footer {
+    padding: 30px;
+    clear: both;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    text-align: center;
+  }
+  
+  footer h3 {
+    font-size: 20px;
+  }
+  
