--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,22 +22,18 @@
     font-size: 48px;
   }
   
-  .seo {
-    color: #d9dcd6;
+  header nav li {
+    display: inline-block;
+    margin-left: 25px;
   }
   
   nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif;
     font-size: 20px;
     list-style-type: none;
-  }
-  
-  header nav li {
-    display: inline-block;
-    margin-left: 25px;
   }
   
   /* Link Styles */
@@ -81,6 +77,26 @@
     margin-left: 20px;
   }
   
+  /* Article Styles */
+  article {
+    margin-bottom: 32px;
+    color: #ffffff;
+  }
+  
+  article h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+  
+  .content article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+  }
+  
   /* Benefits Section Styles */
   .benefits {
     margin-right: 20px;
@@ -89,7 +105,7 @@
     float: right;
     width: 20%;
     height: 100%;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif;
     background-color: #2589bd;
     margin-bottom: 32px;
     color: #ffffff;
@@ -108,28 +124,6 @@
     display: block;
     margin: 10px auto;
     max-width: 150px;
-  }
-  
-  /* Article Styles */
-  article {
-    margin-bottom: 32px;
-    color: #ffffff;
-  }
-  
-  article h2 {
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
-  
-  .content article {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-    margin-bottom: 20px;
-    font-size: 36px;
   }
   
   /* Footer Styles */
